# rustgame

./: .gitignore  Cargo.toml  Readme.md  build.rs  build.sh
assets/: blue_rect.ase  red_rect.ase  test_level.tmx  tilemap.aseprite  white_rect.ase
src/: asset_cache.rs  constants.rs  game_object_types.rs  game_scene.rs  geometry.rs  input.rs  main.rs  scene.rs  sprite.rs  tiles.rs  ui.rs
src/editor/: mod.rs
src/engine/: game_context.rs  geometry.rs  input.rs  mod.rs  physics.rs  rendering.rs  sprite.rs  text.rs  tiles.rs  ui.rs
src/game/: assets.rs  constants.rs  game_scene.rs  mod.rs  player.rs  ui_test.rs
