[package]
name = "game"
version = "0.1.0"
authors = ["matthewroelle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = "0.9.2"
bytebuffer = "0.2.0"
stretch = "0.3.2"
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image", "ttf"]